# VTESTstudio_Vparam

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  workspace.code-workspace
Include/: CMakeLists.txt  lib.c  lib.cpp  lib.h
Release/CLOSE/: CLOSED_PART_NORMAL_OUT.csv  CLOSED_PART_NORMAL_OUT.vparam  CLOSE_CLOSED_OUT.csv  CLOSE_CLOSED_OUT.vparam  CLOSE_OPENED_OUT.csv  CLOSE_OPENED_OUT.vparam
Release/GuestSending/: GuestSending_OUT.vparam
Release/OPEN/: OPEN_EOA_NORMAL_OUT.csv  OPEN_EOA_NORMAL_OUT.vparam  OPEN_EOA_UNLOCK_OUT.csv  OPEN_EOA_UNLOCK_OUT.vparam  OPEN_OPENED_OUT.csv  OPEN_OPENED_OUT.vparam  OPEN_PART_LAST_OUT.csv  OPEN_PART_LAST_OUT.vparam  OPEN_PART_NORMAL_OUT.csv  OPEN_PART_NORMAL_OUT.vparam
Release/REMOTE/: CLOSE_OUT.csv  CLOSE_OUT.vparam  LOW_OPEN_OUT.csv  LOW_OPEN_OUT.vparam  RUNNING_OUT.csv  RUNNING_OUT.vparam
Release/STOP/: STOP_EOA_OUT.csv  STOP_EOA_OUT.vparam  STOP_ING_OUT.csv  STOP_ING_OUT.vparam
Release/WelcomeDrv/: WelcomeDrv_OUT.csv  WelcomeDrv_OUT.vparam
Resource/: CMakeLists.txt
Resource/CLOSE/: CLOSED_PART_NORMAL.vparam  CLOSE_CLOSED.vparam  CLOSE_OPENED.vparam
Resource/GuestSending/: GuestSending.vparam
Resource/OPEN/: OPEN_EOA_NORMAL.vparam  OPEN_EOA_UNLOCK.vparam  OPEN_OPENED.vparam  OPEN_PART_LAST.vparam  OPEN_PART_NORMAL.vparam
Resource/OTA/: OTA_OPEN_EOA_NORMAL.vparam  OTA_OPEN_EOA_UNLOCK.vparam  OTA_OPEN_PART_NORMAL.vparam  OTA_REQUEST_CLOSED.vparam
Resource/REMOTE/: CLOSE.vparam  LOW_OPEN.vparam  LOW_OPEN_2.vparam  RUNNING.vparam
Resource/REQUEST_CLOSE/: CLOSED.vparam
Resource/STOP/: STOP_EOA.vparam  STOP_ING.vparam  dev.vparam
Resource/WelcomeDrv/: WelcomeDrv.vparam
Source/CLOSE/: CLOSED_PART_NORMAL.cpp  CLOSE_CLOSED.cpp  CLOSE_OPENED.cpp  tempCodeRunnerFile.cpp
Source/GuestSending/: GuestSending.c
Source/OPEN/: MAIN.CPP  OPENED.cpp  OPEN_EOA_NORMAL.CPP  OPEN_EOA_UNLOCK.CPP  OPEN_OPENED.CPP  OPEN_PART_LAST.CPP  OPEN_PART_NORMAL.CPP
Source/OTA/: OTA_CLOSE_OPENED.CPP  OTA_OPEN_EOA_NORMAL.cpp  OTA_OPEN_EOA_UNLOCK.cpp  OTA_OPEN_PART_LAST.cpp  OTA_OPEN_PART_NORMAL.cpp  OTA_REQUEST_CLOSED.cpp
Source/REMOTE/: CLOSE.CPP  CLOSE.c  LOW_OPEN.CPP  LOW_OPEN.c  LOW_OPEN_2.CPP  RUNNING.CPP
Source/REQUEST_CLOSE/: CLOSED.CPP
Source/STOP/: STOP_EOA.cpp  STOP_ING.cpp  dev.cpp
Source/WelcomeDrv/: WelcomeDrv.c
